@@ -253,9 +253,7 @@ public final class ConnectionI extends IceInternal.EventHandler implements Conne
 	synchronized(this)
 	{
 	    if(_transceiver != null || _dispatchCount != 0 ||
-	       (_threadPerConnection != null &&
-		_threadPerConnection != Thread.currentThread() &&
-		_threadPerConnection.isAlive()))
+	       (_threadPerConnection != null &&	_threadPerConnection.isAlive()))
 	    {
 		return false;
 	    }
@@ -279,14 +277,18 @@ public final class ConnectionI extends IceInternal.EventHandler implements Conne
 	    }
 	}
 
-	if(threadPerConnection != null && threadPerConnection != Thread.currentThread())
+	if(threadPerConnection != null)
 	{
-	    try
+	    while(true)
 	    {
-		threadPerConnection.join();
-	    }
-	    catch(InterruptedException ex)
-	    {
+		try
+		{
+		    threadPerConnection.join();
+		    break;
+		}
+		catch(InterruptedException ex)
+		{
+		}
 	    }
 	}
 
@@ -401,14 +403,18 @@ public final class ConnectionI extends IceInternal.EventHandler implements Conne
 	    }
 	}
 
-	if(threadPerConnection != null && threadPerConnection != Thread.currentThread())
+	if(threadPerConnection != null)
 	{
-	    try
+	    while(true)
 	    {
-		threadPerConnection.join();
-	    }
-	    catch(InterruptedException ex)
-	    {
+		try
+		{
+		    threadPerConnection.join();
+		    break;
+		}
+		catch(InterruptedException ex)
+		{
+		}
 	    }
 	}
     }
@@ -1402,7 +1408,6 @@ public final class ConnectionI extends IceInternal.EventHandler implements Conne
 	    s += sw.toString();
 	    _instance.logger().error(s);
 	    
-	    _state = StateClosed;
 	    try
 	    {
 		_transceiver.close();
@@ -1411,8 +1416,6 @@ public final class ConnectionI extends IceInternal.EventHandler implements Conne
 	    {
 		// Here we ignore any exceptions in close().
 	    }
-	    _transceiver = null;
-	    _threadPerConnection = null;
 	    
 	    Ice.SyscallException e = new Ice.SyscallException();
 	    e.initCause(ex);
